--- a/notebooks/04_neural_painter_x_painting.ipynb
+++ b/notebooks/04_neural_painter_x_painting.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/libreai/neural-painter-x/blob/master/notebooks/04_neural_painter_x_painting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/libreai/neural-painters-x/blob/master/notebooks/04_neural_painter_x_painting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,6 +44,16 @@
         "---\n",
         "\n",
         "[1] *Neural Painters: A Learned Differentiable Constraint for Generating Brushstroke Paintings*. Reiichiro Nakano. arXiv preprint [arXiv:1904.08410](https://arxiv.org/abs/1904.08410), 2019."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N_gQqbBVAZ5n",
+        "colab_type": "text"
+      },
+      "source": [
+        "<center><img src=\"https://raw.githubusercontent.com/libreai/neural-painters-x/master/images/neural_painter_painting.png\" width=\"80%\"/></center>"
       ]
     },
     {
